# KotlinYOLO

./: local.properties  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/kotlinyolo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: yolo_postprocess.cpp  yolo_preprocess.cpp
app/src/main/java/com/example/kotlinyolo/: BoxOverlayView.kt  ImageUtils.kt  MainActivity.kt  PoseOverlayView.kt  Yolo11PoseProcessor.kt  YoloV8Processor.kt
app/src/main/java/com/example/kotlinyolo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/kotlinyolo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
server/: server.py
